fix(sub): long sub name pushed off screen

--- a/src/writeData/subscriptions/components/DetailsSubscriptionPage.scss
+++ b/src/writeData/subscriptions/components/DetailsSubscriptionPage.scss
@@ -17,6 +17,7 @@
         h3 {
           font-size: $cf-space-m;
           line-height: $cf-space-m;
+          overflow-wrap: break-word;
         }
 
         h6 {
